WS2-1834: Fix rounded.css and webspark_cropper_theme.module for rounded crop image

--- a/web/modules/webspark/webspark_cropper_theme/css/rounded.css
+++ b/web/modules/webspark/webspark_cropper_theme/css/rounded.css
@@ -1,3 +1,5 @@
-.cropper-view-box {
+form[action*='media_library_selected_type=cropped_image_rounded_1_1_'] .cropper-view-box,
+form[id='media-cropped-image-rounded-1-1-edit-form'] .cropper-view-box,
+form[id='media-cropped-image-rounded-1-1-add-form'] .cropper-view-box{
   border-radius: 50% !important;
 }
